start release action by pushing version tags instead of when release is created on Github

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,9 @@ env:
   NAME: 'Release'
 
 on:
-  release:
-    types: [created]
-  workflow_dispatch: # For manual testing
-
+  push:
+    tags:
+      - "v1.*"
 jobs:
 
   build-release:
