--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,14 +105,16 @@ jobs:
     - name: List files
       shell: bash
       run: |
-        ls src/keepass2android-app/bin/**/*.*
+        ls src/keepass2android-app/bin/Release/net8.0-android/publish/*.apk
+        ls src/keepass2android-app/bin/Release/net8.0-android/*/publish/*.apk
 
     - name: Archive production artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: signed APK (built on ${{ github.job }})
+        name: keepass2android_${{ matrix.target }}_${{ matrix.flavor }}
         path: |
-          src/keepass2android-app/bin/Release/**/*.apk
+          src/keepass2android-app/bin/Release/net8.0-android/publish/*.apk
+          src/keepass2android-app/bin/Release/net8.0-android/*/publish/*.apk
     
     #- name: Upload APK to GitHub Release
     #  uses: softprops/action-gh-release@v2
