--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,6 +91,7 @@ jobs:
 
     - name: List apks
       run:  find . -type f -name "*.apk"
+      shell: bash
 
     - name: Build APK (net)
       env:
@@ -107,6 +108,7 @@ jobs:
     
     - name: List apks
       run:  find . -type f -name "*.apk"
+      shell: bash
     
     - name: Archive production artifacts
       uses: actions/upload-artifact@v4
@@ -118,6 +120,7 @@ jobs:
     
     - name: List apks
       run:  find . -type f -name "*.apk"
+      shell: bash
       
     #- name: Upload APK to GitHub Release
     #  uses: softprops/action-gh-release@v2
