--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
 
   #   - name: Build keepass2android (net)
   #     run: |
-  #       make msbuild Flavor=Net
+  #       make dotnetbuild Flavor=Net
 
   #   - name: Build APK (net)
   #     run: |
@@ -96,7 +96,7 @@ jobs:
 
   #   - name: Build keepass2android (nonet)
   #     run: |
-  #       make msbuild Flavor=NoNet
+  #       make dotnetbuild Flavor=NoNet
 
   #   - name: Build APK (nonet)
   #     run: |
@@ -212,7 +212,7 @@ jobs:
 
   #   - name: Build keepass2android (net)
   #     run: |
-  #       make msbuild Flavor=Net
+  #       make dotnetbuild Flavor=Net
 
   #   - name: Build APK (net)
   #     run: |
@@ -230,7 +230,7 @@ jobs:
 
   #   - name: Build keepass2android (nonet)
   #     run: |
-  #       make msbuild Flavor=NoNet
+  #       make dotnetbuild Flavor=NoNet
 
   #   - name: Build APK (nonet)
   #     run: |
@@ -279,8 +279,8 @@ jobs:
       with:
         minimum-size: 8GB
 
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v2
+    - name: Add dotnetbuild to PATH
+      uses: microsoft/setup-dotnetbuild@v2
       # If we want to also have nmake, use this instead
       #uses: ilammy/msvc-dev-cmd@v1
 
@@ -322,7 +322,7 @@ jobs:
 
     - name: Build keepass2android (net)
       run: |
-        make msbuild Flavor=Net
+        make dotnetbuild Flavor=Net
 
     - name: Build APK (net)
       run: |
@@ -344,7 +344,7 @@ jobs:
 
     - name: Build keepass2android (nonet)
       run: |
-        make msbuild Flavor=NoNet
+        make dotnetbuild Flavor=NoNet
 
     - name: Test Autofill
       working-directory: ./src/Kp2aAutofillParser.Tests
