--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -325,8 +325,17 @@ jobs:
         make dotnetbuild Flavor=Net
 
     - name: Build APK (net)
+      if: github.ref == 'refs/heads/master'
+      env:
+        KeyStore: "${{ github.workspace }}/kp2a.keystore"
+        MyAndroidSigningStorePass: ${{ secrets.KEY_STORE_PASSWORD }}
+        MyAndroidSigningKeyPass: ${{ secrets.KEY_PASSWORD }}
+        DropboxAppKey: ${{ secrets.DROPBOX_APP_KEY }}
+        DropboxAppSecret: ${{ secrets.DROPBOX_APP_SECRET }}
+        DropboxAppFolderAppKey: ${{ secrets.DROPBOX_APP_FOLDER_APP_KEY }}
+        DropboxAppFolderAppSecret: ${{ secrets.DROPBOX_APP_FOLDER_APP_SECRET }}
       run: |
-        make apk Flavor=Net
+        make apk Configuration=Release Flavor=Net
 
     - name: Archive production artifacts (net)
       uses: actions/upload-artifact@v4
