fix display issues with edge-to-edge when choosing file location; make file chooser look more modern

--- a/src/java/JavaFileStorageTest-AS/app/build.gradle
+++ b/src/java/JavaFileStorageTest-AS/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     namespace "com.crocoapps.javafilestoragetest2"
 
-    compileSdkVersion 33
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "com.crocoapps.javafilestoragetest2"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -35,6 +35,7 @@ dependencies {
     implementation project(':android-filechooser')
     implementation project(':JavaFileStorage')
     implementation "androidx.annotation:annotation:1.5.0"
+    implementation "com.google.android.material:material:1.12.0"
 }
 
 configurations {
