Refactor KeeShare tests to use PwGroup and update signature verification logic. Add project references for keepass2android-app and KeePassLib2Android. Update .gitignore to include PluginQR settings. Remove obsolete settings file.

--- a/src/KeeShare.Tests/KeeShare.Tests.csproj
+++ b/src/KeeShare.Tests/KeeShare.Tests.csproj
@@ -33,4 +33,9 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\keepass2android-app\keepass2android-app.csproj" />
+    <ProjectReference Include="..\KeePassLib2Android\KeePassLib2Android.csproj" />
+  </ItemGroup>
+
 </Project>
