Refactor KeeShare tests and Adjust layout properties for better UI responsiveness

--- a/src/KeeShare.Tests/KeeShare.Tests.csproj
+++ b/src/KeeShare.Tests/KeeShare.Tests.csproj
@@ -10,11 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -33,9 +39,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\keepass2android-app\keepass2android-app.csproj" />
-    <ProjectReference Include="..\KeePassLib2Android\KeePassLib2Android.csproj" />
-  </ItemGroup>
+  <!-- 
+    Note: Project references to keepass2android-app and KeePassLib2Android removed
+    because they target net9.0-android which is incompatible with net8.0.
+    Tests use local copies of the pure-logic methods being tested.
+  -->
 
 </Project>
