--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,8 @@ jobs:
 
     - name: Update dotnet workloads
       run: |
-        dotnet workload update        
+        dotnet workload update
+        dotnet workload restore
 
     - name: List apks
       run:  find . -type f -name "*.apk"
