--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -312,7 +312,9 @@ jobs:
     - name: Update dotnet workloads
       run: |
         dotnet workload update
+        cd keepass2android/src/keepass2android-app
         dotnet workload restore
+        cd ../../..
 
     - name: Select the manifest
       run: |
