--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,9 @@ jobs:
     - name: Update dotnet workloads
       run: |
         dotnet workload update
+        cd keepass2android/src/keepass2android-app
         dotnet workload restore
+        cd ../../..
 
     - name: List apks
       run:  find . -type f -name "*.apk"
