fix cd to app directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -312,9 +312,9 @@ jobs:
     - name: Update dotnet workloads
       run: |
         dotnet workload update
-        cd keepass2android/src/keepass2android-app
+        cd src/keepass2android-app
         dotnet workload restore
-        cd ../../..
+        cd ../..
 
     - name: Select the manifest
       run: |
